--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto - Lessons Learned</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<header id="cabecalho">
-    <h1 id="titulo">Projeto - Lessons Learned</h1>
-    <img id="minha_foto" src="layo.jpg" alt="layoFoto">
-</header>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header id="cabecalho">
+      <h1 id="titulo">Projeto - Lessons Learned</h1>
+      <img id="minha_foto" src="layo.jpg" alt="layoFoto" />
+    </header>
     <main>
-    <ol id="licoes_aprendidas">
+      <ol id="licoes_aprendidas">
         <li>Linux</li>
         <li>Git</li>
         <li>GitHub</li>
@@ -23,26 +23,40 @@
         <li>Inteligencia emocional</li>
         <li>Colaboração</li>
         <li>Analise</li>
-    </ol>
-    <ul id="licoes_a_aprender">
+      </ol>
+      <ul id="licoes_a_aprender">
         <li>JavaScript</li>
         <li>Interação</li>
         <li>Node</li>
         <li>DOM</li>
-        <li>CSS Responsive  </li>
+        <li>CSS Responsive</li>
         <li>React</li>
         <li>SQL</li>
         <li>Feedback assertivo</li>
         <li>Controle da ansiedade</li>
         <li>Unit Tests</li>
-    </ul>
-    <article>
-        <p>Desde que entrei na Trybe, meu aprendizado tem sido exponencial devido a toda evolução que tive nessas duas ultimas semanas de estudos, coisas que eu sempre pensei que era apenas gênios que faziam.<br>
-        Hoje com todo o suporte que a escola tem me dado tenho evoluído muito dentro da área que estou me descobrindo.</p>
-    </article>
+      </ul>
+      <article>
+        <p>
+          Desde que entrei na Trybe, meu aprendizado tem sido exponencial devido
+          a toda evolução que tive nessas duas ultimas semanas de estudos,
+          coisas que eu sempre pensei que era apenas gênios que faziam.<br />
+          Hoje com todo o suporte que a escola tem me dado tenho evoluído muito
+          dentro da área que estou me descobrindo.
+        </p>
+      </article>
+      <aside>
+        <p>
+          Todo dia tem sido uma luta para estilizar dentro do CSS, creio que a
+          evolução venha com a experiencia, a cada dia melhorando mais e
+          aprendendo mais sobre esse mundo do CSS.
+        </p>
+      </aside>
     </main>
     <footer id="rodape">
-        <a id="link" href="https://blog.betrybe.com/" target="_blank">Blog da Trybe!</a>
+      <a id="link" href="https://blog.betrybe.com/" target="_blank"
+        >Blog da Trybe!</a
+      >
     </footer>
-</body>
+  </body>
 </html>
