Passo 3 - Adicionado ID na foto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <header id="cabeçalho">
             <h1>Lições aprendidas - Trybe!</h1>
         </header>
-        <img src="imagens/Max.jpg" alt="Imagem de perfil do Maximilian Kaden">
+        <img src="imagens/Max.jpg" alt="Imagem de perfil do Maximilian Kaden" id="minha_foto">
     </body>
 </html>
