Adicionano link externo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <article>
       <h3>#beTrybe!</h3>
       <p>
-        Leo é aluno da <a href="betrybe.com" target="_blank">Trybe</a>. Faça como ele e não perca tempo, estude na melhor escola de programação da galáxia!
+        Leo é aluno da <a href="https://betrybe.com" target="_blank">Trybe</a>. Faça como ele e não perca tempo, estude na melhor escola de programação da galáxia!
       </p>
     </article>
 
