--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <header id="cabecalho"> <h1 id="titulo">Lições Aprendidas - Trybe!</h1></header>
+    <img id="minha_foto" src="images/minha_foto.jpg" alt="">
 </body>
 </html>
