--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                 <li>Mongo</li>
                 <li>NodeJS</li>
             </ul>
+            <footer id="rodape">
+            </footer>
         </main>
     </body>
 </html>
