--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <li>Node</li>
         <li>SQL</li>
     </ul>
+    <a href="https://www.google.com.br/" target="_blanc">google</a>
+    <footer>
+        todos os direitos reservados, Mathaus
+    </footer>
    
   </body>
 </html>
