Bonus 1: Adicionar tabela

--- a/index.html
+++ b/index.html
@@ -42,6 +42,20 @@
     <li>Node</li>
     <li>SQL</li>
   </ul>
+  <table id="modulos_concluidos">
+    <tr>
+      <th>Fundamentos</th>
+      <th>Front End</th>
+      <th>Back End</th>
+      <th>Ciencia da Computação</th>
+    </tr>
+    <tr>
+      <td>Sim</td>
+      <td>Não</td>
+      <td>Não</td>
+      <td>Não</td>
+    </tr>
+  </table>
   <section>
   <article>
     <p>
