Requisito 6 - Rodapé da página

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 <li>Mais sobre soft skills</li>
             </ul>
         </section>
+        <footer id="rodape">
+            <h3>Compilado por Raquel Picanço</h3>
+        </footer>
     </main>
 </body>
 </html>
