--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
   </header>
 
   <img id="minha_foto" src="/rsz_1img_20200517_133641.jpg" alt="">
+
+  <ul>
+    <li>Terminal Shell</li>
+    <li>Git</li>
+    <li>GitHub</li>
+    <li>Como funciona a internet</li>
+    <li>HTML</li>
+    <li>HTML - posicionamento</li>
+    <li>CSS</li>
+    <li>HTML semântico</li>
+    <li>O stomatopoda</li>
+    <li>Projeto</li>
+  </ul>
 </body>
 
 </html>
