--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <section>
-        <header id="cabecalho">
-            <h1 id="titulo">Project: Lessons Learned</h1>
-        </header>
+      <header id="cabecalho">
+          <h1 id="titulo">Project: Lessons Learned</h1>
+      </header>
+    </section>
+
+    <article>
+      <section id="apresentacao">
+          <h2 id="nome">Fernanda Cajueiro Machado</h2>
+          <img id="minha_foto" src="fernanda.jpeg" alt="Foto de Fernanda Cajueiro">
+      </section>
+    </article>
+    
 </body>
 </html>
