--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
         </ul>
       </table>
     </main>
-    <footer id="rodape">
-
-    </footer>
+    <footer id="rodape"></footer>
   </body>
 </html>
