--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header id="cabecalho">
-        <h1 id="titulo">Lessons Learned</h1>
-    </header>
+  <header id="cabecalho">
+    <h1 id="titulo">Lessons Learned</h1>
+  </header>
+  <img src="assets/daniel.jpg" alt="Foto de Daniel" id="minha_foto">
 </body>
 </html>
