--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Lessons Learned</title>
 </head>
 <body>
-    <header id="cabecalho">
+    <header>
+        <div id="cabecalho">
         <h1 id="titulo">Lessons Learned</h1>
         <nav>
             <ul>
@@ -15,9 +16,10 @@
                 <li>Quero aprender</li>
             </ul>
         </nav>
+        </div>
     </header>
     <img src="minhafoto.jpg" alt= "foto de perfil">
-    <a href="https://github.com/fcbresende">Minha Página github</a>
+   <a href="https://github.com/fcbresende">Minha Página github</a>
     <article>
         <h2> Meu Aprendizado</h2>
         <p>nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit amet risus nullam eget felis eget nunc lobortis mattis aliquam faucibus purus in massa tempor nec feugiat nisl pretium fusce id velit ut tortor pretium viverra suspendisse potenti nullam ac tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed viverra tellus in hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue </p>
@@ -55,7 +57,6 @@
     </ul>
     </section>
     <footer id="rodape">
-
+        <p>Projeto integrante do curso de Desenvolvimento Web da Trybe, iniciado em NOV/20 - Turma 09.</p>
     </footer>
-    
 </html>
