--- a/index.html
+++ b/index.html
@@ -13,7 +13,31 @@
     </header>
 
     <main>
-        <img src="Assets/fotoPerfil.jpg" alt="Foto de um homem de frente" id="fotoPerfil">
+        <img src="Assets/fotoPerfil.jpg" alt="Foto de um homem de frente" id="minha_foto">
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Empatia</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>Inspect</li>
+            <li>Semantic HTML</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS Responsive</li>
+            <li>ES6</li>
+            <li>HOF</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+        </ul>
     </main>
 </body>
 </html>
