adicionando requisito 8 - artigo sobre aprendizado

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li>Semantic HTML</li>
                 </ol>
             </td>
-            
+
             <td>
                 <ul id="licoes_a_aprender">
                     <li>JavaScript</li>
@@ -48,6 +48,10 @@
         <article>
             <p>Meu aprendizado na Trybe esta sendo incrível, eu não imaginava que em menos de um mês de curso estaria com tanto conhecimento tão bem consolidado já aprendemos Unix, Git, GitHub Html, CSS e HTML Semântico. E agora estamos no primeiro projeto e está indo muito bem, acredito que em breve as coisas ficarão mais difíceis, mas nada que um pouco de mais de dedicação e estudos fora do horário do curso não resolvam. :-)</p>
         </article>
+
+        <aside>
+            <p>Houve algo muito engraçado no dia de hoje, no inicio da apresentação do projeto um de nossos colegas recebeu o host do zoom e pode mutar os nossos instrutores muito hilário, cada dia eu me divirto mais neste curso. :-)</p>
+        </aside>
     </main>
 
     <footer id="rodape">
