Fixing link tag to css - GOGO Tryber

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned Project</h1>
     </header>
-    <img src="pablo.jpeg" alt="foto de uma pessoa" id="minha-foto">
+    <img src="pablo.jpeg" alt="foto de uma pessoa" id="minha_foto">
 
     <ul id="licoes-aprendidas">
         <li>HTML</li>
