--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
             <h1>Lições aprendidas - Trybe!</h1>
         </header>
         <img src="imagens/Max.jpg" alt="Imagem de perfil do Maximilian Kaden" id="minha_foto">
+        <ol id="licoes_aprendidas">
+            <li>a</li>
+            <li>b</li>
+            <li>c</li>
+            <li>d</li>
+            <li>e</li>
+            <li>f</li>
+            <li>g</li>
+            <li>h</li>
+            <li>h</li>
+            <li>h</li>
+        </ol>
     </body>
 </html>
