Requisito 7 - Adicionado link externo no menu

--- a/index.html
+++ b/index.html
@@ -7,32 +7,41 @@
 <body>
   <header id="cabecalho">
     <h1 id="titulo">Lições Aprendidas - Projeto 1</h1>
+    <nav>
+      <ul>
+        <li><a href="#cabecalho">Início</a></li>
+        <li><a href="https://github.com/Deltadigo" target="_blank" rel="noopener noreferrer">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/rodrigo-farias-5a2a30128/" target="_blank">Linkedin</a></li>
+      </ul>
+    </nav>
   </header>
   <img src="rodrigofarias.jpeg" alt="Foto de Rodrigo Farias" id="minha_foto">
-  <ol id="licoes_aprendidas">
-    <li>Unix</li>
-    <li>Bash</li>
-    <li>Git</li>
-    <li>Github</li>
-    <li>Html</li>
-    <li>Css</li>
-    <li>Zoom</li>
-    <li>Slack</li>
-    <li>Colaboração</li>
-    <li>Empatia</li>
-  </ol>
-  <ul id="licoes_a_aprender">
-    <li>Javascript</li>
-    <li>Sql</li>
-    <li>Nosql</li>
-    <li>Mysql</li>
-    <li>MongoDB</li>
-    <li>Nodejs</li>
-    <li>Express</li>
-    <li>React</li>
-    <li>Python</li>
-    <li>Lógica de programação</li>
-  </ul>
+  <main id="main">
+    <ol id="licoes_aprendidas">
+      <li>Unix</li>
+      <li>Bash</li>
+      <li>Git</li>
+      <li>Github</li>
+      <li>Html</li>
+      <li>Css</li>
+      <li>Zoom</li>
+      <li>Slack</li>
+      <li>Colaboração</li>
+      <li>Empatia</li>
+    </ol>
+    <ul id="licoes_a_aprender">
+      <li>Javascript</li>
+      <li>Sql</li>
+      <li>Nosql</li>
+      <li>Mysql</li>
+      <li>MongoDB</li>
+      <li>Nodejs</li>
+      <li>Express</li>
+      <li>React</li>
+      <li>Python</li>
+      <li>Lógica de programação</li>
+    </ul>
+  </main>
   <footer id="rodape">Rodapé</footer>
 </body>
 </html>
