Editando a barra de navegacao

--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
 
     <header id="cabecalho">
         <h1 id="titulo">O que eu aprendi na Trybe até agora</h1>
+
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="https://www.betrybe.com/" target="_blank">Trybe</a></li>
+            </ul>
+        </nav>
     </header>
 
     <img id="minha_foto" src="rsz_21perfil.png" alt="me">
 
-    <a href="index.html">Home</a>
-    <a href="https://www.betrybe.com/" target="_blank">Trybe</a>
-    </ul>
-
     <section>
+        <h3>Lista de coisas que ainda vou aprender</h3>
         <ul id="licoes_a_aprender">
             <li>Javascript.</li>
             <li>React.</li>
@@ -46,9 +50,11 @@
         </p>
 
         <aside>
+            <h3>A passagem que foi marcante para mim</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum est suscipit ratione incidunt ea delectus
                 laudantium laboriosam, dolorem tempora sapiente cupiditate rerum vel. Cupiditate earum sapiente, facilis
-                sunt sint consequatur?</p>
+                sunt sint consequatur?
+            </p>
         </aside>
     </article>
 
