--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Lições aprendidas na <a href="https://www.betrybe.com/" target="_blank">Trybe</a></h1>
+        <h1 id="titulo">Lições aprendidas na Trybe</h1>
     </header>
 
 <main>
@@ -47,6 +47,14 @@
             <li>SQL</li>
         </ul>
     </section>
+
+    <article>
+        <h2>Rotina de Estudos</h2>
+        <p>A rotina de estudos na <a href="https://www.betrybe.com/" target="_blank">Trybe</a> é baseada na metodologia ativa de ensino, portanto me responsabilizo pelo meu aprendizado.
+        </p>
+        <p>Os dias de estudo começam com dinâmicas de "Esquenta" com o objetivo de desenvolvimento de soft skills. Depois disso estudo os conteúdos propostos para o dia e sigo para aula ao vivo, para então praticar resolvendo exercícios.</p>
+        <p>Nos dias de projeto, realizo exercícios, projetos e desafios práticos.</p>
+    </article>
 </main>
 
 <footer id="rodape"></footer>
