--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width" />
-        <title></title>
+        <title>Lições aprendidas</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <header id="cabecalho"git >
-            <img id="minha_foto" id="eu" src="eu.jpg" alt="foto de frente expressando seriedade">
+            <img id="minha_foto" id="eu" src="minha_foto.jpeg" alt="foto de frente expressando seriedade">
             <h1 id="titulo">Lições Aprendidas: Trybe!</h1>
             <nav>
                 <ul class="navigation">
@@ -44,7 +46,7 @@
                 <li>Como liderar projetos</li>
                 <li>Como alcançar um emprego de alto nível</li>
             </ul>
-            <article>
+            <article id="artigo">
                 <h3>Meu aprendizado na Trybe <em>so far</em>...</h3>
                 <p> Quando iniciei o curso há pouco tempo confesso que não imaginava que seria o que está sendo. Para falar a verdade, achei que seria muito menos impactante e olhem que só se passaram <b>2 semanas!</b><br> Atualmente eu já me sinto como um desenvolvedor web iniciante, realizando tarefas antes inimagináveis, como estruturar uma página em HTML estilizando com CSS e publicando ela através de pushs, commits e pull requests no Git/GitHub.<br></p>
             </article>
@@ -52,11 +54,11 @@
                 <section>
                     <h3>Por exemplo...</h3>
                     <img id="okay" src="okayhand.jpg" alt="ate agora tudo certo">
-                    <p>Esses dias eu terminei meu web portfolio (cujo link você pode acessar por <a href="https://lhfmworker.github.io/" target="_blank">aqui</a>)</p>
+                    <p id="exemplo">Esses dias eu terminei meu web portfolio (cujo link você pode acessar por <a href="https://lhfmworker.github.io/" target="_blank">aqui</a>)</p>
             </aside>
+            <footer id="rodape">
+                <p>Conteúdo desenvolvido por: <a href="https://lhfmworker.github.io" target="_blank">Luiz Henrique</a></p>
+            </footer>
         </main>
-        <footer id="rodape">
-            <p>Conteúdo desenvolvido por: <a href="https://lhfmworker.github.io" target="_blank">Luiz Henrique</a></p>
-        </footer>
     </body>
 </html>
