alterando atributos relacionados a fontes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header id = "cabecalho"><h1 id = "titulo">Titulo</h1></header>
-    <nav></nav>
+    <nav>Listas Artigos Tabela</nav>
     <img id = "minha_foto" src = "rpufal.png">
     <section>
     <ol id = "licoes_aprendidas">
