Adicionada alguma estilizacao e corrigidos uns erros

--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 <body>
   <header id="cabecalho">
     <h1 id="title">Lições Aprendidas | Trybe</h1>
-    <figure>
-      <img id="minha_foto" src="assets/img/rsz_1img_20201111_224535.jpg" alt="">
-      <nav>
-        <a href="https://www.linkedin.com/in/rafaelgeronimo/" target="_blank">LinkedIn</a>
-        <a href="https://github.com/rafaelgeronimo" target="_blank">GitHub</a>
-      </nav>
-    </figure>
-    
   </header>
   <main>
+    <section id="sobre">
+      <figure>
+        <img id="minha_foto" src="assets/img/avatar.jpg" alt="">
+        <nav id="links">
+          <a href="https://www.linkedin.com/in/rafaelgeronimo/" target="_blank">LinkedIn</a>
+          <a href="https://github.com/rafaelgeronimo" target="_blank">GitHub</a>
+        </nav>
+      </figure>
+    </section>
     <section id="lists">
       <ol id="licoes_aprendidas">
         <li>Bash & Shell</li>
@@ -70,7 +71,7 @@
     </aside>
   </main>
   <footer id="rodape">
-
+    Lessons Learned Project | Rafael Gerônimo | Trybe
   </footer>
 </body>
 </html>
