Primeira mexida no CSS conforme codeclimate, mais listas

--- a/index.html
+++ b/index.html
@@ -14,41 +14,45 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="">Home</a></li>
-                    <li><a href="">Lições aprendidas</a></li>
-                    <li><a href="">Lições a aprender</a></li>
+                    <li><a href="#licoes_aprendidas">Lições aprendidas</a></li>
+                    <li><a href="#licoes_a_aprender">Lições a aprender</a></li>
                     <li><a href="">Sobre meu aprendizado</a></li>
                     <li><a href="">Uma breve passagem</a></li>
                 </ul>
             </nav>
         </header>
         <img id="minha_foto" alt="foto do Tiago" src="https://avatars1.githubusercontent.com/u/68355072?s=460&u=b51db7ba3f1d958425b778c6b9caa434b4189db8&v=4">
-        <div>
-            <ol>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ol>
-        </div>
-        <div>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+        <div class="listas">
+            <div>
+                <h2>Lições aprendidas</h2>
+                <ol id="licoes_aprendidas">
+                    <li>Fundamentos de Desenvolvimento WEB</li>
+                    <li>UNIX</li>
+                    <li>SHELL</li>
+                    <li>BASH</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>Internet</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>HTML Semântico</li>
+                </ol>
+            </div>
+            <div>
+                <h2>Lições a Aprender</h2>
+                <ul id="licoes_a_aprender">
+                    <li>JavaScript</li>
+                    <li>DOM e Seletores</li>
+                    <li>Web Storage</li>
+                    <li>CSS Responsivo</li>
+                    <li>Flexbox</li>
+                    <li>Objetos</li>
+                    <li>Forms</li>
+                    <li>NodeJS</li>
+                    <li>Arquitetura Web</li>
+                    <li>Arquitetura de Redes</li>
+                </ul>
+            </div>
         </div>
         <p> enchedor de linguiça</p>
         <p> enchedor de linguiça</p>
