--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ol>
         </section>
         <section>
-            <ol id="licoes_a_aprender">
+            <ul id="licoes_a_aprender">
                 <li>Javascript</li>
                 <li>React</li>
                 <li>Metodologias Ágeis</li>
@@ -36,7 +36,7 @@
                 <li>Frameworks</li>
                 <li>Python</li>
                 <li>Soft Skills</li>
-            </ol>
+            </ul>
         </section>
     </body>
 </html>
