--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                 <h1 id="titulo">Lições Aprendidas</h1>
             </header>
             <img id="minha_foto"src="MinhaFoto.jpg" alt="minha foto">
+            <p>Acesse meu <a href="https://www.linkedin.com/in/khyrki/" target="_blank">Linkedin</a>.</p>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
                 <li>Bash</li>
