--- a/index.html
+++ b/index.html
@@ -21,5 +21,20 @@
             <li>h</li>
             <li>h</li>
         </ol>
+        <section>
+            <h2>Lições que ainda vou aprender</h2>
+            <ul id="licoes_a_aprender">
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+            </ul>
+        </section>
     </body>
 </html>
