Adiocionando a pasta de fotos e o requisito 3

--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
     <header id="cabecalho">
         <h1 id="titulo">Lições que aprendi </h1>
     </header>
+    <img src="./images/pedro.jpg" alt="Foto do Pedro durante a noite" id="minha_foto">
 </body>
