ajustes de posicionamento

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     </header>
     <main>
         <img id="minha_foto" src="Minha-foto.jpg" alt="foto-Johne" width="200px">
-        <article>
+        <h2 ><a href="https://www.linkedin.com/in/johne-alves/" target="blanch">Johne Alves</a></h2>
+        <div id="lista">
             <section>
+                <h3>Lições</h3><br>
                 <ol id="licoes_aprendidas">
                     <li>Unix</li>
                     <li>Git</li>
@@ -48,13 +50,16 @@
                 </ul>
             </section>
         </article>
-        <article>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui quaerat nostrum quo nobis neque expedita non in accusantium itaque eaque perferendis reprehenderit cumque, architecto error nemo quas obcaecati sequi provident!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut illum dignissimos ipsum, esse quasi ipsam nesciunt voluptates natus alias dicta, laboriosam, quidem vel quisquam facilis voluptate adipisci nulla labore consequuntur!</p>
-        </article>
-        <aside>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta accusamus corrupti necessitatibus labore architecto quae eos deleniti cum repellendus quod mollitia maxime doloremque quam praesentium, dignissimos hic culpa fugit ut.</p>
-        </aside>
+        <div id="learn">
+            <article class="lado-esquerdo">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui quaerat nostrum quo nobis neque expedita non in accusantium itaque eaque perferendis reprehenderit cumque, architecto error nemo quas obcaecati sequi provident!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut illum dignissimos ipsum, esse quasi ipsam nesciunt voluptates natus alias dicta, laboriosam, quidem vel quisquam facilis voluptate adipisci nulla labore consequuntur!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nam numquam quisquam repellat alias dignissimos impedit itaque distinctio totam? Recusandae dolorem blanditiis aliquid laborum consequuntur aliquam debitis ad molestias fuga.</p>
+            </article>
+            <aside class="lado-direito">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta accusamus corrupti necessitatibus labore architecto quae eos deleniti cum repellendus quod mollitia maxime doloremque quam praesentium, dignissimos hic culpa fugit ut.</p>
+            </aside>
+        </div>    
     </main>
     <footer id="rodape"> by <a href="https://www.linkedin.com/in/johne-alves/" target="blanch">Johne Alves</a></footer>
 </body>
