Adiciona lista de licoes a aprender do requisito nº 5

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
             <section>
                 <ul id="licoes_a_aprender">
                     <li>Javascript</li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Ganhar dinheiro</li>
+                    <li>Soft skill</li>
+                    <li>Banco de Dados</li>
+                    <li>Mysql</li>
+                    <li>DOM</li>
+                    <li>Flexbox</li>
+                    <li>Desgin</li>
+                    <li>HTML e CSS profissional</li>
+                    <li>Python</li>
                 </ul>
             </section>
         </article>
