--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
         </aside>
+
+        <table>
+            <tr>
+                <td>item1</td>
+                <td>item2</td>
+                <td>item3</td>
+            </tr>
+        </table>
     </main>
 
     <footer id="rodape">
