--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital@1&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas</h1>
@@ -49,20 +53,27 @@
     <section>
         <article id="sobre_mim">
             <p>
-                Sou estudante de engenharia eletrônica na Universidade Tecnológica Federal do Paraná campus de Campo Mourão, sempre demonstrei interesse pela área de tecnologia, e hoje busco me aprofundar na área de embarcados e desenvolvimento de software. Neste ano conheci a Trybe e fiz a escolha de participar do processo seletivo, hoje estou a menos de um mês estudando, mas já posso perceber o quanto evolui e o longo caminho de aprendizado que existe pela frente. Sou muito feliz por ter preenchido minha inscrição!
+                Sou estudante de engenharia eletrônica na Universidade Tecnológica Federal do Paraná campus de Campo
+                Mourão, sempre demonstrei interesse pela área de tecnologia, e hoje busco me aprofundar na área de
+                embarcados e desenvolvimento de software. Neste ano conheci a Trybe e fiz a escolha de participar do
+                processo seletivo, hoje estou a menos de um mês estudando, mas já posso perceber o quanto evolui e o
+                longo caminho de aprendizado que existe pela frente. Sou muito feliz por ter preenchido minha inscrição!
             </p>
         </article>
     </section>
     <section>
         <aside>
             <p>
-                Algo que prezo muito e vejo que aqui será passado de uma maneira clara é o fluxo de trabalho. Chegar na Trybe e já receber uma aula de como utilizar o git e aprender o fluxo de como as coisas devem acontecer foi ótimo.
+                Algo que prezo muito e vejo que aqui será passado de uma maneira clara é o fluxo de trabalho. Chegar na
+                Trybe e já receber uma aula de como utilizar o git e aprender o fluxo de como as coisas devem acontecer
+                foi ótimo.
             </p>
         </aside>
     </section>
-<footer id="rodape">
-    <p>Todos os direitos reservados, Bruno</p>
-</footer>
-    
+    <footer id="rodape">
+        <p>Todos os direitos reservados, Bruno</p>
+    </footer>
+
 </body>
+
 </html>
