Altera ambos os codigos de acordo com o segundo requisito

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>LESSONS LEARNED PROJECT - LETSLIMA</title>
     </head>
     <body>
-<h1></h1>
+      <div id="cabecalho">
+        <h1 id="titulo">LESSONS LEARNED PROJECT</h1>
+      </div>
     </body>
 </html>
