--- a/index.html
+++ b/index.html
@@ -9,36 +9,47 @@
   </head>
   <body>
       <header id="cabecalho">
-          <h1 id="titulo">Lessons Learned | Trybe</h1>
+          <h1 id="titulo">Lessons Learned</h1>
       </header>
       <main>
-        <img src="foto.jpg"  id="minha_foto">
-        <ol id="licoes_aprendidas">
-            <h2>Lições Aprendidas:</h2>
-            <li>Unix</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Empatia</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Slack</li>
-            <li>Zoom</li>
-            <li>Inspect</li>
-            <li>Semantic HTML</li>
-        </ol>
-        <ul id="licoes_a_aprender">
-            <h2>Lições a aprender:</h2>
-            <li>JavaScript</li>
-            <li>DOM</li>
-            <li>Forms</li>
-            <li>CSS Responsive</li>
-            <li>ES6</li>
-            <li>HOF</li>
-            <li>Unit Tests</li>
-            <li>React</li>
-            <li>Node</li>
-            <li>SQL</li>
-        </ul>
+            <img src="foto.jpg"  id="minha_foto">
+            <ol id="licoes_aprendidas">
+                <h2>Lições Aprendidas:</h2>
+                <li>Unix</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Empatia</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Slack</li>
+                <li>Zoom</li>
+                <li>Inspect</li>
+                <li>Semantic HTML</li>
+            </ol>
+            <ul id="licoes_a_aprender">
+                <h2>Lições a aprender:</h2>
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>Forms</li>
+                <li>CSS Responsive</li>
+                <li>ES6</li>
+                <li>HOF</li>
+                <li>Unit Tests</li>
+                <li>React</li>
+                <li>Node</li>
+                <li>SQL</li>
+            </ul>
+            <article>
+                <p>
+                    Lorem ipsum at dolor tempor vel lacinia malesuada platea odio orci, etiam pretium massa sapien etiam eleifend potenti egestas pellentesque eros, integer augue ad blandit fringilla cras elit proin potenti. 
+                    per accumsan pretium sed mollis urna purus nisl ipsum quisque pharetra donec egestas, semper pellentesque taciti pretium tortor nec viverra nulla sagittis quis a. 
+                    fames torquent suscipit volutpat accumsan velit vehicula aenean sagittis, imperdiet et ipsum mi et tortor odio, fames adipiscing purus nunc leo cras aenean. 
+                    dolor ad nisl dictumst leo justo amet placerat tempor, pharetra conubia turpis eget tellus fames habitant, ornare morbi tempus class lectus bibendum eleifend. 
+                    </p>
+            </article>
+            <aside>
+                Lorem ipsum donec egestas etiam id elementum, morbi ante in eros convallis erat pharetra, elementum mi quisque nulla eros.facilisis integer interdum odio dapibus etiam fermentum tortor nulla cursus vehicula egestas, libero justo ut primis ante at donec hendrerit dui pellentesque. fringilla facilisis id vivamus dui sem, purus nisi integer.
+            </aside>
       </main>
       <footer id="rodape">
           <nav>
