--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <img id="minha_foto" src="/rsz_1img_20200517_133641.jpg" alt="">
 
-  <ul>
+  <ul id="licoes_aprendidas">
     <li>Terminal Shell</li>
     <li>Git</li>
     <li>GitHub</li>
@@ -26,6 +26,19 @@
     <li>HTML semântico</li>
     <li>O stomatopoda</li>
     <li>Projeto</li>
+  </ul>
+
+  <ul id="licoes_a_aprender">
+    <li>JavaScript</li>
+    <li>UI & UX</li>
+    <li>React</li>
+    <li>Nodejs</li>
+    <li>Expressjs</li>
+    <li>SQL & NoSQL/li>
+    <li>Python</li>
+    <li>Soft Skills</li>
+    <li>Front-end</li>
+    <li>Back-end</li>
   </ul>
 </body>
 
