Barra de titulo e top 0

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header id="cabecalho">
 
+    </header>
 </body>
 </html>
+
+<!-- 
+O elemento com o id cabecalho deve ser fixo no topo da página, com a propriedade top tendo 0px
+
+O título deve estar dentro da barra e possuir o ID "titulo", além de ser uma tag h1 -->
