[Task 6] Created website footer

--- a/index.html
+++ b/index.html
@@ -38,5 +38,8 @@
                 <li>Soft Skills</li>
             </ul>
         </section>
+        <footer id="rodape">
+            <p>Webiste desenvolvido por Gabriel Galdino. Todos os direitos reservados.</p>
+        </footer>
     </body>
 </html>
