Requisito 7 - Adiciona link externo

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         </section>
         <footer id="rodape">
             <h3>Compilado por Raquel Picanço</h3>
+            <nav>
+                <a href="https://github.com/rach-vp" target="_blank">Github</a>
+                <a href="https://www.linkedin.com/in/raquel-pican%C3%A7o-384736107/" target="_blank">Linkedin</a>
+            </nav>
         </footer>
     </main>
 </body>
