--- a/index.html
+++ b/index.html
@@ -27,5 +27,17 @@
         <li>Empatia</li>
         <li>Inteligência Emocional</li>
     </ol>
+    <ul>
+        <li>JavaScript</li>
+        <li>PHP</li>
+        <li>CSS Responsivo</li>
+        <li>React</li>
+        <li>SQL</li>
+        <li>Pensamento Crítico</li>
+        <li>Criatividade</li>
+        <li>Liderança</li>
+        <li>Comunicação</li>
+        <li>Colaboração</li>
+    </ul>
   </body>
 </html>
