--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - Trybe </h1>
-    </header>    
+    </header> 
+    <section class="image">
+        <img id="minha_foto" src="https://avatars3.githubusercontent.com/u/47483029?s=460&u=cdf0eba4ef59445b6b241ba53927707198095d97&v=4" alt="Foto-Diego">  
+    </section>
 </body>
 </html>
