--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li>Metodologias ageis</li>
             <li>Gerenciamento de estado com Redux</li>
             <li>Context API</li>
-            <li>React Hooks</li>https://github.com/gabrielgarciamendonca/gabrielgarciamendonca/edit/main/README.md
+            <li>React Hooks</li>
         </ul>
         <article>
             <!--https://gabrielgarciamendonca.github.io/   |   Meu portfólio foi utilizado para buscar alguns textos acerca dos locais no qual eu estudei.-->
@@ -61,18 +61,21 @@
                 <p><strong>Situação: </strong>Cursando</p>
                 <p><strong>Descrição: </strong>A Trybe é uma escola para pessoas que querem construir uma carreira de
                     sucesso em tecnologia e que se compromete
-                    integralmente com seus estudantes, pois as pessoas só pagam quando conseguirem um bom trabalho./p>
+                    integralmente com seus estudantes, pois as pessoas só pagam quando conseguirem um bom trabalho.</p>
+            </section>
+            <section>
+                <aside>
+                    <h3>Breve passagem...</h3>
+                    <p><strong>Quando?</strong> Foi na época que estava fazendo faculdade.</p>
+                    <p>Tive que desenvolver um wallet do 0, sem saber nem sequer o que era orientação a objetos e muito
+                        menos um banco de dados relacional. Mas corri muito, pesquisei, estudei e consegui.</p>
+                </aside>
             </section>
         </article>
     </main>
     <footer id="rodape">
 
-        <!--https://github.com O
-                    programa conta com
-                    mais de 1.500 horas de aulas presenciais e online e aborda introdução ao desenvolvimento de
-                    software, front-end,
-                    back-end, ciência da computação, engenharia de software, metodologias ágeis e habilidades
-                    comportamentais.</gabrielgarciamendonca/gabrielgarciamendonca/edit/main/README.md  | Utilizado para buscar o endereço da imagem do icone do linkedin-->
+        <!-- https://github.com/gabrielgarciamendonca/gabrielgarciamendonca/edit/main/README.md  | Utilizado para buscar o endereço da imagem do icone do linkedin -->
         <a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img
                 src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
     </footer>
