--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
+    <header id="cabecalho">
+        <h1 id="titulo">Lessons Learned on Trybe</h1>
+    </header>
+    <main>
 
+    </main>
 </body>
 
 </html>
