inclusão do footer e links (fontawasome também inserido

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lessons Learned</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/d4a654d60c.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header id="cabecalho">
@@ -44,7 +45,14 @@
         </div>
     </main>
     <footer id="rodape">
-
+        <h3 class="title-footer">Para conhecer mais:</h3>
+        <nav id="navbar-footer">
+            <ul id="links-footer">
+                <li><a href="https://www.betrybe.com/">Conheça mais <strong>onde</strong> estudo</a></li>
+                <li><a href="https://pt.wikipedia.org/wiki/Desenvolvimento_web">Conheça<strong> sobre</strong> o que </a></li>
+                <span style="font-size:50px;"><a href="https://github.com/Michaelmascarenhas90"><i class="fab fa-github-alt"></i></a></span>
+            </ul>
+        </nav>
     </footer>
     
 </body>
