--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
         <li>Comunicação</li>
         <li>Colaboração</li>
     </ul>
+    <footer id="rodape">
+
+    </footer>
   </body>
 </html>
