Requisitos 08 - Inserindo um artigo

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         <li>Node</li>
         <li>SQL</li>
     </ul>
+    <article>
+        <h1>Sobre o Aprendizado na Trybe</h1>
+        <p>Nessas três semanas de Trybe, foi possível aprender mais sobre Linux, comandos de terminal e rever os conteúdos de Git, CSS e HTML. Mesmo estando um pouco atrasada em relação ao conteúdo de CSS e HTML, é possível notar que a parte assíncrona é cheia de conteúdo externo que nos ajudam a ampliar e conhecer melhor os comandos apresentados no dia. O mais interessante foi conhecer a turma,que mesmo sendo numerosa e extremamente ansiosa, mas todos colaboram para o crescimento de todos.</p>
+    </article>
     <footer id="rodape">
         Feito com 💚 por <a href="https://github.com/nathaliaveneziano" target="_blank">Nathália Veneziano</a>
     </footer>
