Passo 6 e 7 - Adicionado rodape e Link Externo

--- a/index.html
+++ b/index.html
@@ -36,5 +36,7 @@
                 <li>1</li>
             </ul>
         </section>
+        <a href="https://www.linkedin.com/in/maximilian-kaden-a48bb0a1/" target="_blank">Clique aqui para saber mais</a>
+        <footer id="rodape"></footer>
     </body>
 </html>
