--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header id="cabecalho">
         <h1 id="titulo">Osvaldo Borges Campos Neto</h1>
     </header>
-    <div class="fotos">
+    <figure class="fotos">
         <img src="../images/me.jpg" alt="Minha Foto" id="minha_foto">
-    </div>
-    <section>
+    </figure>
+    <section id="listas">
         <h2>Licoes</h2>
         <ol id="licoes_aprendidas">
             <li>Unix</li>
@@ -25,7 +25,7 @@
             <li>Zoom</li>
             <li>Slack</li>
             <li>Semantic HTML</li>
-            <li>+++</li>
+            <li>Terminal</li>
         </ol>
         <ul id="licoes_a_aprender">
             <li>JavaScript</li>
@@ -41,6 +41,7 @@
         </ul>
     </section>
     <footer id="rodape">
+        <a href="https://github.com/osvaldoBorgesCNeto" target="_blank">Meu GitHub</a>
         <h5>Todos os direitos reservados, Osvaldo Borges.</h5>
     </footer>
 </body>
