--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Lucas - DEV</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
 
 </head>
     <body>
@@ -13,6 +15,11 @@
             <header id="titulo">
                 <h1>Lucas Silva - DEV</h1>
             </header>
+            <ul id="nav-btn">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
         </nav>
     </body>
 </html>
