--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         <li>Node</li>
         <li>SQL</li>
     </ul>
+    <article id="aprender">
+        Aprendizagem é o processo pelo qual as competências, habilidades, conhecimentos, comportamento ou valores são adquiridos ou modificados, como resultado de estudo, experiência, formação, raciocínio e observação. Este processo pode ser analisado a partir de diferentes perspectivas, de forma que há diferentes teorias de aprendizagem. Aprendizagem é uma das funções mentais mais importantes em humanos e animais e também pode ser aplicada a sistemas artificiais.
+        Aprendizagem humana está relacionada à educação e desenvolvimento pessoal. Deve ser devidamente orientada e é favorecida quando o indivíduo está motivado. O estudo da aprendizagem utiliza os conhecimentos e teorias da neuropsicologia, psicologia, educação e pedagogia.
+        Aprendizagem como um estabelecimento de novas relações entre o ser e o meio ambiente tem sido objeto de vários estudos empíricos em animais e seres humanos. O processo de aprendizagem pode ser medido através das curvas de aprendizagem, que mostram a importância da repetição de certas predisposições fisiológicas, de "tentativa e erro" e de períodos de descanso, após o qual se pode acelerar o progresso. Esses estudos também mostram o relacionamento da aprendizagem com os reflexos condicionados.[1] Algumas pesquisas começam a revelar que os sonhos têm um papel muito importante na aprendizagem e na formação de memória. Por exemplo, alguns cientistas observaram que, durante o sono o cérebro recorda coisas que aprendeu recentemente. Durante o sono de ondas lentas, a mente recorda novas memórias. Em seguida, no sono REM - em que acontecem os sonhos - o cérebro trabalha para guardar essas memórias por um longo prazo.
+        Aprender programação de computadores não é exatamente uma tarefa simples. No geral, é necessário um grande esforço para que um estudante consiga aprender a programar de forma satisfatória, ao longo de um intervalo de tempo que pode variar de vários meses a vários anos. Na trybe aprendemos varias linguagens de programação e desdes os primeiros momentos já somos inseridos no dia a dia de empresas.
+    </article>
     <a href="https://www.google.com.br/" target="_blanc">google</a>
     <footer>
         todos os direitos reservados, Mathaus
