Adiciona link externo do requisito nº7

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
         <nav>
             <ul>
-                <li><a</li>
+                <li><a>Home</a></li>
+                <li><a>O que aprendi ?</a></li>
+                <li><a href="https://www.google.com/" target="_blank" >Site interessante</a></li>
             </ul>
         </nav>
     </header>
@@ -51,7 +53,9 @@
             <h2>O que aprendi ?</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate quod magnam minima et dolorem quos. Voluptatibus, velit dolorem similique a laboriosam nam, itaque autem officia expedita officiis ducimus quasi ipsam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos repellat incidunt, labore eaque voluptatum iusto culpa quo voluptatibus. Enim delectus voluptas pariatur hic. Placeat dicta libero vero perspiciatis, nobis et?</p>
         </article>
-
     </main>
+    <footer id="rodape">
+        <span>Feito por Thiago Carreira Vallim</span>
+    </footer>
 </body>
 </html>
