--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
         <p>Os dias de estudo começam com dinâmicas de "Esquenta" com o objetivo de desenvolvimento de soft skills. Depois disso estudo os conteúdos propostos para o dia e sigo para aula ao vivo, para então praticar resolvendo exercícios.</p>
         <p>Nos dias de projeto, realizo exercícios, projetos e desafios práticos.</p>
     </article>
+    
+    <aside>
+        <h3>O aprendizado já começou no processo seletivo</h3>
+        <p>Participar do processo seletivo da <a href="https://www.betrybe.com/" target="_blank">Trybe</a> foi uma experiência única e de muito aprendizado desde o começo, uma vez que nunca havia tido contato com programação ou desenvolvimento web.</p>
+        <p>Através do curso introdutório (disponibilizado após a inscrição), pude aprender o básico sobre JavaScript para realizar 3 desafios práticos propostos e seguir para a próxima etapa do processo, o teste de raciocínio lógico.</p>
+    </aside>
 </main>
 
 <footer id="rodape"></footer>
