--- a/index.html
+++ b/index.html
@@ -8,8 +8,23 @@
 	</head>
 	<body>
 		<header id="cabecalho">
-      <h1 id="titulo">Lições aprendidas - Trybe</h1>
-      <img id="minha_foto" src="./foto-Ivan.jpg" alt="minha-foto" width="300">      
+      <h1 id="titulo">Lições aprendidas - Trybe</h1>      
     </header>
+    <section>
+      <img id="minha_foto" src="./foto-Ivan.jpg" alt="minha-foto" width="300">
+      <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Bash</li>
+        <li>Shell</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Internet</li>
+        <li>HTML Semântico</li>
+        <li>Empatia</li>      
+      </ol>
+    </section>
+    
 	</body>
 </html>
