--- a/index.html
+++ b/index.html
@@ -12,6 +12,34 @@
     </header>
     <img src="thumbnail_Sem título.jpg" alt="Estudante da Trybe" id="minha_foto">
     <main>
+        <aside>
+            <ol id="licoes_aprendidas">
+                <li>Linux</li>
+                <li>Html</li>
+                <li>CSS</li>
+                <li>Unix</li>
+                <li>Bash</li>
+                <li>Zoom</li>
+                <li>Slack</li>
+                <li>Empatia</li>
+                <li>Git</li>
+                <li>GitHub</li>
+            </ol>
+        </aside>
+        <aside>
+            <li id="licoes_a_aprender">
+                <li>NodeJS</li>
+                <li>JavaScript</li>
+                <li>API</li>
+                <li>React</li>
+                <li>Soft Skills</li>
+                <li>SQL</li>
+                <li>Express</li>
+                <li>Empatia</li>
+                <li>MongoDB</li>
+            </li>
+        </aside>
+
         <section>
             <table>
                 <tr>
