--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
     <h1 id="titulo">Lessons Learned</h1>
   </header>
   <img src="assets/daniel.jpg" alt="Foto de Daniel" id="minha_foto">
+  <ol id="licoes_aprendidas">
+    <li>Unix</li>
+    <li>Bash</li>
+    <li>Git</li>
+    <li>GitHub</li>
+    <li>Estruturas de página HTML</li>
+    <li>Primeiros passos em CSS</li>
+    <li>CSS Seletores e posicionamento</li>
+    <li>HTML Semântico</li>
+    <li>Como a internet funciona</li>
+    <li>Inteligência Emocional</li>
+  </ol>
 </body>
 </html>
