--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
         <h1 id="titulo">Lições aprendidas na Trybe</h1>
     </header>
 
-<main>
+<nav>
     <section>
         <img id="minha_foto" src="Ana.png" alt="Foto de Ana Luiza Machado Salgado" width=20%>
         <h2><a href="https://www.linkedin.com/in/analuizamsalgado/" target="_blank">Ana Luiza Machado Salgado</a></h2>
     </section>
+</nav>
 
+<main>  
     <section>
         <ol id="licoes_aprendidas">
             <li>Unix & Bash</li>
