Adicionando artigo sobre meu aprendizado

--- a/index.html
+++ b/index.html
@@ -20,10 +20,17 @@
       <figcaption class="profile-pic">Leonardo Majevski</figcaption>
     </figure>
 
-    <article>
+    <section>
       <h3>#beTrybe!</h3>
       <p>
         Leo é aluno da <a href="https://betrybe.com" target="_blank">Trybe</a>. Faça como ele e não perca tempo, estude na melhor escola de programação da galáxia!
+      </p>
+    </section>
+    
+    <article>
+      <h3>O aprendizado na Trybe</h3>
+      <p>
+        Poder aprender a programar com a Trybe é sem sombra de dúvidas a melhor opção que um estudante pode ter. Tenho certeza que o comprometimento da Trybe ao fornecer as melhores práticas de ensino direcionadas para o mercado de trabalho é um dos fatores que mais vão influenciar no meu sucesso como aluno e posteriormente como um desenvolvedor.
       </p>
     </article>
 
