--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         <li>Colaboração</li>
     </ul>
     <footer id="rodape">
-
+        <a href="https://www.linkedin.com/in/danrlley-rodrigues/" target="_blank">
+        LinkedIn
+        </a>
     </footer>
   </body>
 </html>
