--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
           <h2 id="nome">Fernanda Cajueiro Machado</h2>
           <img id="minha_foto" src="fernanda.jpeg" alt="Foto de Fernanda Cajueiro">
       </section>
+
+      <section>
+          <ol id="licoes_aprendidas">
+              <li>Unix</li>
+              <li>Bash</li>
+              <li>Shell</li>
+              <li>Git</li>
+              <li>GitHub</li>
+              <li>GitHub Pages</li>
+              <li>Internet</li>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>HTML Semântico</li>
+          </ol>
+      </section>
     </article>
 </body>
 </html>
