--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
-        <title></title>
+        <title>Lessons Lerned - Trybe</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
 
-      <body>
-          <header id="cabecalho">
-              <h1 id="titulo">Lessons Learned - Trybe</h1>
-          </header>
+    <body>
+        <header id="cabecalho">
+            <h1 id="titulo">Lessons Learned - Trybe</h1>
 
-          <main>
-              <img src="/sauloimg.jpeg" alt="Imagem de Saulo Kirchmaier" id="minha_foto">
+            <nav>
+                <ul>
+                    <li>Início</li>
+                    <li>Lições</li>
+                    <li>Sobre</li>
+                </ul>
+            </nav>
+        </header>
 
-              <section>
+        <main>
+            <img src="/sauloimg.jpeg" alt="Imagem de Saulo Kirchmaier" id="minha_foto">
+
+            <section>
                     <h2>Estudado</h2>
                     <ol id="licoes_aprendidas">
                         <li>Unix/Shell</li>
@@ -42,23 +51,27 @@
                         <li>React</li>
                         <li>Redux</li>
                     </ul>
-              </section>
+            </section>
 
-              <article id="artigo-aprendizado">
+            <section>
+                <article id="artigo-aprendizado">
                     <h2>Ser um tryber</h2>
                     <p>Estou apenas na terceira semana de estudos na Trybe, e ja estou fazendo o primeiro projeto, que é justamente essa página web. Durante essas semanas consegui entender o funcionamento do git/github, de forma pratica e clara e a utilizar o terminal. Vimos o básico de HTML e CSS, e ja posso contruir páginas sem problemas. Sei que ainda tem muito por vir, e a proxima lição será sobre Javascript. Mal posso esperar para me tornar um desenvolvedor Web Full Stack Jr e trabalhar para mundo 🗺️.</p>
-              </article>
+                </article>
 
-              <aside>
-                  <h3>Aconteceu comigo</h3>
-                  <p>Na Trybe, fazemos muitas atividades de sofl skills, uma delas foi o primeiro trabalho em equipe, em que eu e mais 6 colegas eleboramos uma apresentação sobre o funcionamento da internet. Foi muito interessante ver que existem diversas opiniões e pontos de vista.</p>
-              </aside>
+                <aside>
+                    <h3>Aconteceu comigo</h3>
+                    <p>Na Trybe, fazemos muitas atividades de sofl skills, uma delas foi o primeiro trabalho em equipe, em que eu e mais 6 colegas eleboramos uma apresentação sobre o funcionamento da internet. Foi muito interessante ver que existem diversas opiniões e pontos de vista.</p>
+                </aside>
+            </section>
 
-              <p>Para conhecer meus trabalhos acesse o meu <a href="https://github.com/saulokirchmaier" target="_blank">Github</a>, e para saber um pouco mais sobre mim acesse o meu <a href="https://www.linkedin.com/in/saulokirchmaier/" target="_blank">LinkedIn</a></p>
-          </main>
+            
 
-          <footer id="rodape">
+            <p>Para conhecer meus trabalhos acesse o meu <a href="https://github.com/saulokirchmaier" target="_blank">Github</a>, e para saber um pouco mais sobre mim acesse o meu <a href="https://www.linkedin.com/in/saulokirchmaier/" target="_blank">LinkedIn</a></p>
+        </main>
+
+        <footer id="rodape">
             <p>Feito por Saulo Kirchmaier como projeto para Trybe</p>
-          </footer>
-      </body>
+        </footer>
+    </body>
 </html>
