--- a/index.html
+++ b/index.html
@@ -24,19 +24,36 @@
     <img id="minha_foto" src="rsz_21perfil.png" alt="me">
 
     <section>
-        <h3>Lista de coisas que ainda vou aprender</h3>
-        <ul id="licoes_a_aprender">
-            <li>Javascript.</li>
-            <li>React.</li>
-            <li>Redux.</li>
-            <li>Git.</li>
-            <li>SQL.</li>
-            <li>Python.</li>
-            <li>SCRUM.</li>
-            <li>Soft skills.</li>
-            <li>Administrar melhor o tempo.</li>
-            <li>Definir prioridades.</li>
-        </ul>
+        <div>
+            <h3>Lista de coisas aprendidas</h3>
+            <ul id="licoes_a_aprender">
+                <li>Fundamentos do desenvolvimento web.</li>
+                <li>Terminal linux.</li>
+                <li>Git.</li>
+                <li>GitHub.</li>
+                <li>Internet.</li>
+                <li>HTML.</li>
+                <li>CSS.</li>
+                <li>A importância das soft skills.</li>
+                <li>Administrar melhor o tempo.</li>
+                <li>Definir prioridades.</li>
+        </div>
+
+        <div>
+            <h3>Lista de coisas que ainda vou aprender</h3>
+            <ul id="licoes_aprendidas">
+                <li>Javascript.</li>
+                <li>React.</li>
+                <li>Redux.</li>
+                <li>Git.</li>
+                <li>SQL.</li>
+                <li>Python.</li>
+                <li>SCRUM.</li>
+                <li>Soft skills.</li>
+                <li>Administrar melhor o tempo.</li>
+                <li>Definir prioridades.</li>
+            </ul>
+        </div>
     </section>
 
     <article>
@@ -48,15 +65,15 @@
             eius vero quia, numquam vel id corrupti a neque enim nisi maxime modi fugiat architecto? Reiciendis
             aspernatur nulla ipsa?
         </p>
-
-        <aside>
-            <h3>A passagem que foi marcante para mim</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum est suscipit ratione incidunt ea delectus
-                laudantium laboriosam, dolorem tempora sapiente cupiditate rerum vel. Cupiditate earum sapiente, facilis
-                sunt sint consequatur?
-            </p>
-        </aside>
     </article>
+
+    <aside>
+        <h3>A passagem que foi marcante para mim</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum est suscipit ratione incidunt ea delectus
+            laudantium laboriosam, dolorem tempora sapiente cupiditate rerum vel. Cupiditate earum sapiente, facilis
+            sunt sint consequatur?
+        </p>
+    </aside>
 
     <footer id="rodape">
     </footer>
